tests/ui/g-wire-control-zero-tag.stderr
error[E0080]: evaluation panicked: control descriptor tag 0 is reserved
 --> $RUST/core/src/panic.rs
  |
  = note: evaluation of `hibana::g::send::<0, 1, hibana::g::Msg<124, hibana::integration::cap::GenericCapToken<ZeroTagControlKind>>, 0>::{constant#0}` failed here
  |
 ::: src/g.rs
  |
  |             panic!("{}", error.message());
  |             ----------------------------- in this macro invocation

note: erroneous constant encountered
 --> src/g.rs
  |
  | /     const {
  | |         if FROM >= ROLE_DOMAIN_SIZE || TO >= ROLE_DOMAIN_SIZE {
  | |             panic!("{}", ROLE_INDEX_ERROR);
... |
  | |     }
  | |_____^

note: the above error was encountered while instantiating `fn send::<0, 1, Msg<124, GenericCapToken<ZeroTagControlKind>>, 0>`
  --> tests/ui/g-wire-control-zero-tag.rs:15:13
   |
15 |       let _ = g::send::<
   |  _____________^
16 | |         0,
17 | |         1,
18 | |         g::Msg<ZERO_TAG_CONTROL_LOGICAL, GenericCapToken<ZeroTagControlKind>>,
19 | |         0,
20 | |     >();
   | |_______^
